fixed button for android devices and styled the group create text field on mobile

--- a/public/css/pageTemplate.css
+++ b/public/css/pageTemplate.css
@@ -138,6 +138,25 @@ div#groupList
 		display:none;
 	}
 
+	input#createGroup {
+    padding-top: 8px;
+    padding-left: 30px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    margin-top: 2px;
+    margin-left: 6px;
+    margin-top: 15px;
+    border-radius: 12px;
+    color: #c1c1c1;
+    border: none;
+    border-bottom: 1px solid #3d3d3d;
+    cursor: pointer;
+    background-color:#c8c8c8;
+    font-size: 14px;
+    width: 209px;
+    font-family: 'open_sansregular';
+}
+
 @media only screen and (min-width: 750px)
 {
 
